--- a/src/styles/partials/content/_gallery.scss
+++ b/src/styles/partials/content/_gallery.scss
@@ -14,7 +14,12 @@
 	}
 }
 
-.gallery-item-image {
+.gallery-image-wrapper {
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.gallery-image-thumbnail-link {
 	cursor: pointer;
 }
 
