--- a/src/layouts/layout/header.pug
+++ b/src/layouts/layout/header.pug
@@ -1,9 +1,6 @@
-mixin headerLogo(type)
-	if breadcrumb_path.length && breadcrumb_path[0].file && breadcrumb_path[0].file.slug === 'eagx'
-		- type = 'eagx';
-	- type = type || 'eag'
+mixin headerLogo()
 		#header-logo.row
-			.col-md-6.col-md-offset-3
+			.col-sm-8.col-md-6
 				.header-logo-wrapper
 					img.header-logo(src=site.logo)
 
