--- a/src/styles/partials/content/_gallery.scss
+++ b/src/styles/partials/content/_gallery.scss
@@ -2,9 +2,56 @@
 
 }
 
+.gallery-image {
+	margin-bottom: $grid-gutter-width;
+	cursor: pointer;
+	cursor: nesw-resize;
+	cursor: zoom-in;
+}
+
 .gallery-image-wrapper {
 	@include responsive-square(66.66%);
 	margin-bottom: $grid-gutter-width;
+}
+
+.gallery-title {
+	margin-top: 0;
+}
+
+.gallery-subtitle {
+	margin-top: 0;
+	color: #999;
+}
+
+.gallery-description {
+	@media(min-width: $screen-md) {
+		column-count: 3;
+		column-gap: 10px; 
+	}
+}
+
+.gallery-title-xs {
+	@media(min-width: $screen-md) {
+		display: none;
+	}
+}
+
+.gallery-title-md {
+	@media(max-width: $screen-sm-max) {
+		display: none;
+	}
+}
+
+.gallery-item-wrapper {
+	&.active {
+		.gallery-image-wrapper {
+			opacity: 0.5;
+		}
+	}
+}
+
+.gallery-item-content {
+
 }
 
 .gallery-item-caption {
@@ -17,32 +64,37 @@
 .gallery-image-wrapper {
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-position: center;
 }
 
 .gallery-image-thumbnail-link {
 	cursor: pointer;
+	display: block;
+	width: 100%;
+	height: 100%;
 }
 
-body.gallery {
-	.modal-dialog {
-	  width: 100%;
-	  height: 100%;
-	  margin: 0;
-	  padding: $grid-gutter-width/2;
-	}
-	.modal-content {
-		margin-bottom: $grid-gutter-width/2;
-	}
+.modal-dialog {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: $grid-gutter-width/2;
+}
+.modal-content {
+	margin-bottom: $grid-gutter-width/2;
+}
 
-	.modal-header {
-		&>.close {
-			z-index: 1060;
-			position: absolute;
-			right: 20px;
-		}
+.modal-header {
+	h3, h4 {
+		margin-bottom: 0;
 	}
+	&>.close {
+		z-index: 1060;
+		position: absolute;
+		right: 20px;
+	}
+}
 
-	.modal-body {
-		padding: 0;
-	}
+.modal-body {
+	padding: 0;
 }
